[package]
name = "tokio-queue"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
http = "1.2.0"
image = { version = "0.25.5", default-features = false, features = ["png"] }
maud = { version = "0.27.0", features = ["axum"] }
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
