[package]
name = "tokio-queue"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
bytes = "1.10.0"
http = "1.2.0"
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["client", "full", "http1", "http2"] }
hyper-util = { version = "0.1.10", features = ["full"] }
image = { version = "0.25.5", default-features = false, features = ["png"] }
maud = { version = "0.27.0", features = ["axum"] }
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
